Student Portal with authentication Completed